removed pagination text decor, removed word wrap from anchor t tags, site description card border fix

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -53,7 +53,6 @@ h1 {
   font-size: 3rem !important;
   a {
     color: inherit;
-    overflow-wrap: break-word;
   }
 }
 
@@ -206,7 +205,6 @@ a {
   color: $blue;
   text-decoration: none;
 	cursor: pointer;
-  overflow-wrap: break-word;
   &:hover, &:active {
     color: $blue;
   }
@@ -340,7 +338,7 @@ p > img {
   color: $darkGray;
   cursor: pointer;
   font-weight: 300;
-  font-size: 190%;
+  font-size: 2rem;
   letter-spacing: 1px;
   text-align: center;
 
@@ -724,7 +722,6 @@ Modules - reusable parts of our design
   background-color: #4CAF50;
   border-radius: 50px;
   color: #fff;
-  overflow-wrap: break-word;
 }
 
 .pagination a, .pagination span {
@@ -734,6 +731,7 @@ Modules - reusable parts of our design
   margin-right: -2px;
   background-color: #ffffff;
   display: inline-block;
+  background-image: none;
 }
 
 .pagination a {    
